--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "serialize-javascript": ">=3.1.0"
   },
   "browserslist": "defaults",
   "dependencies": {
